WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276856
[fullscreen] Most non-HTML elements should not be supported
https://bugs.webkit.org/show_bug.cgi?id=276856
Summary
[fullscreen] Most non-HTML elements should not be supported
Tim Nguyen (:ntim)
Reported
2024-07-20 22:38:37 PDT
wpt.fyi/fullscreen/api/element-request-fullscreen-svg-rect.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-27 22:39:13 PDT
<
rdar://problem/132661463
>
Tim Nguyen (:ntim)
Comment 2
2025-02-06 22:04:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40191
EWS
Comment 3
2025-02-07 01:28:07 PST
Committed
289994@main
(4645ce50d593): <
https://commits.webkit.org/289994@main
> Reviewed commits have been landed. Closing PR #40191 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug