[fullscreen] Most non-HTML elements should not be supported https://bugs.webkit.org/show_bug.cgi?id=276856 rdar://132661463

Reviewed by Aditya Keerthi.

https://fullscreen.spec.whatwg.org/#dom-element-requestfullscreen

> If any of the following conditions are false, then set error to true:
> This’s namespace is the HTML namespace or this is an SVG svg or MathML math element.

* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-namespaces-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-svg-rect-expected.txt:
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::requestFullscreenForElement):
* Source/WebCore/dom/make_names.pl:
(printTypeHelpersHeaderFile):

Canonical link: https://commits.webkit.org/289994@main